# 2D-Game-Engine

./: CMakeLists.txt  Makefile  glad.c
API/core/: Game.h  Time.h
API/physics/: Collision.h
API/renderer/: AssetManager.h  SpriteRenderer.h
API/scene/: BaseGameObject.h  BaseScene.h  Components.h
API/scene/component/: BoxCollider.h  Components.h  SingleSprite.h  Transform.h
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/include/glad/: glad.h
include/engine/: Engine.h
include/engine/core/: Game.h  Paths.h  Time.h  Window.h
include/engine/input/: Input.h  KeyCode.h
include/engine/math/: Vector.h
include/engine/physics/: Collision.h
include/engine/renderer/: AssetManager.h  Camera2D.h  Shader.h  SpriteRenderer.h  Texture.h
include/engine/scene/: BaseGameObject.h  BaseScene.h  Components.h  GameObject.h  Scene.h
include/engine/scene/component/: BoxCollider.h  Components.h  SingleSprite.h  Transform.h
src/: main.cpp
src/core/: Game.cpp  Game.h  Paths.cpp  Time.cpp  Time.h  Window.cpp  Window.h  game.cpp  time.cpp  window.cpp
src/input/: Input.cpp
src/math/: Vector.cpp
src/physics/: Collision.cpp
src/renderer/: AssetManager.cpp  Camera2D.cpp  Shader.cpp  SpriteRenderer.cpp  Texture.cpp
src/scene/: BaseGameObject.cpp  BaseScene.cpp  Components.cpp  GameObject.cpp  Scene.cpp
src/scene/component/: BoxCollider.cpp  SingleSprite.cpp  Transform.cpp
testing/: CMakeLists.txt  Players.h  main.cpp
testing/assets/shaders/: test.frag  test.vert
